--- a/01-intro/01-hello-world/solution.html
+++ b/01-intro/01-hello-world/solution.html
@@ -1,1 +1,9 @@
-<!-- Напишите решение сюда -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <p>Hello World</p>
+  </body>
+</html>
