--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -6,13 +6,27 @@
         <link rel="stylesheet" href="./accordion.css">
     </head>
     <body>
-        <details>
-            <summary>
-                Accordion item
-            </summary>
-            <p>
-                Hidden content
-            </p>
-        </details>
+        <div class="accordion">
+            <details class="accordion__item" open>
+                <summary class="accordion__summary">Accordion item 1</summary>
+                <div class="accordion__content">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </div>
+            </details>
+        
+            <details class="accordion__item">
+                <summary class="accordion__summary">Accordion item 2</summary>
+                <div class="accordion__content">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </div>
+            </details>
+        
+            <details class="accordion__item">
+                <summary class="accordion__summary">Accordion item 3</summary>
+                <div class="accordion__content">
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </div>
+            </details>
+        </div>
     </body>
 </html>
