--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="./assets/css/main.css">
+        <link rel="stylesheet" href="./pages/page.css">
     </head>
-    <body>
-
+    <body class="page">
+        <h1 class="page__header">Reusable component library</h1>
+        <div class="page__canvas"></div>
+        <footer class="page__footer">
+          <h2>About</h2>
+           <p>This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you can drop into your projects. Get started by checking out our free preview components, or browsing the PNG previews in the categories you're most curious about.</p>
+        </footer>
     </body>
 </html>
